style: fixed trans id heading sizes on mobile

--- a/styles/sass/partials/_trans-id.scss
+++ b/styles/sass/partials/_trans-id.scss
@@ -42,7 +42,13 @@ html.trans-id {
             padding-top: 15px;
 
             h1 {
-                font-size: 27px;
+                font-size: 38px;
+            }
+            h2 {
+                font-size: 15px;
+            }
+            h3, h3 a {
+                font-size: 12px;
             }
         }
     }
